2008-06-28  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* configure.ac: Remove ASM detection.
	* Makefile.am: Make disabling GNU bytecode library
	work by not building javah and javap when this isn't
	available.
	
2006-09-22  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* bin/rmic: Remove file.
	* src/gnu/classpath/tools/rmi/rmic/RMIC.java: Likewise.
	* src/gnu/classpath/tools/rmi/rmic/RMICException.java: Likewise.
	* src/gnu/classpath/tools/rmi/rmic/Variables.java: Likewise.
	* Makefile.am: Remove rmic build logic.

2006-08-30  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* src/gnu/classpath/tools/rmi/registry/RegistryImpl.java: Remove
	file.
	* src/gnu/classpath/tools/rmi/registry/RegistryImpl_Skel.java:
	Likewise.
	* src/gnu/classpath/tools/rmi/registry/RegistryImpl_Stub.java:
	Likewise.
	* Makefile.am (bin_PROGRAMS): Remove rmiregistry.
	(bin_SCRIPTS): Likewise.
	(rmiregistry_SOURCES): Remove variable.
	(rmiregistry_LINK): Likewise.
	(rmiregistry_LDADD): Likewise.
	(rmiregistry_LDADD): Likewise.
	(rmiregistry_LDFLAGS): Likewise.
	(cptools_jar_SOURCES): Remove rmiregistry.
	(dist-hook): Likewise.
	(rmiregistry): Remove.

2006-05-22  Tom Tromey  <tromey@redhat.com>

	* bin/serialver: Removed.
	* bin/native2ascii: Likewise.
	* Makefile.am (bin_PROGRAMS): Removed serialver.
	(bin_SCRIPTS): Likewise.
	(serialver_SOURCES): Removed.
	(serialver_LINK): Likewise.
	(serialver_LDADD): Likewise.
	(serialver_LDADD): Likewise.
	(serialver_LDFLAGS): Likewise.
	(cptools_jar_SOURCES): Removed serialver.
	(dist-hook): Likewise.
	(serialver): Removed.
	* src/gnu/classpath/tools/serialver/SerialVer.java: Moved to
	Classpath.

2006-05-21  Tom Tromey  <tromey@redhat.com>

	* Makefile.am (bin_PROGRAMS): Removed native2ascii.
	(bin_SCRIPTS): Likewise.
	(dist-hook): Likewise.
	(native2ascii_SOURCES): Removed.
	(native2ascii_LDFLAGS): Likewise.
	(native2ascii): Removed.
	* src/gnu/classpath/tools/native2ascii/Native2ASCII.java: Moved
	to Classpath.
